--- a/hipstagram/tsconfig.json
+++ b/hipstagram/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true,
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": [
@@ -31,12 +32,13 @@
       ]
     },
     "include": [
-      "src"
+      "src/**/*.ts"
     ],
     "references": [
       {
         "path": "./tsconfig.node.json"
       }
-    ]
+    ],
+    "allowSyntheticDefaultImports": true
   }
 }
