--- a/hipstagram/tsconfig.json
+++ b/hipstagram/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@pages/*": ["app/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"]
     },
     "composite": true,
     "target": "ES2020",
@@ -31,7 +33,7 @@
       "node"
     ],
     "include": [
-      "src/**/*.ts"
+      "src"
     ],
     "references": [
       {
